--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           environment:
             RAILS_ENV: test
  
-      - run: bin/bundle exec rubocop
+      #- run: bin/bundle exec rubocop
       - run: bin/bundle exec rails_best_practices
       - run: bundle exec brakeman -5 -A -w 1 -e -z
       - run:
