--- a/config/database.yml
+++ b/config/database.yml
@@ -4,21 +4,30 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+
+
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password:
+  host: <%= ENV.fetch('DATABASE_HOSTNAME', 'db') %>
+  database: fish-review3
+  port: 3306
   timeout: 5000
+  charset: utf8
+  collation: utf8_unicode_ci
 
 development:
   <<: *default
-  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: fish-review3_test
 
 production:
   adapter: mysql2
